@startuml diagram

skinparam linetype ortho

package Backend {
    class OmdbApi {
        -api_key: str
        --
        +search(query: str) -> list[Media] | None
        +get_details(imdb_id: str) -> DetailedMedia | None
    }

    class BucketList {
        -file_path: str
        -medias: list[Media]
        --
        +add(media: Media)
        +remove(index: int)
        +mark_seen(index: int)
        +mark_unseen(index: int)
        +view() -> list[Media]
        +sort(field: str, order: str) -> list[Media]
        +filter(field: str, value: str) -> list[Media]
        +save()
    }
}

package Frontend {
    class UserInterface {
        -api: OmdbApi
        -bucket_list: BucketList
        --
        +run()
    }

    class CLI extends UserInterface

    UserInterface *-- OmdbApi
    UserInterface *-- BucketList
}

@enduml